@@ -1,3 +1,7 @@
+2009-02-22  Benjamin Lindner  <lindnerb@users.sourceforge.net>
+
+	* src/mouse.c:  Fix broken FPRINTF debugging statements.
+
 2009-02-21  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/canvas.trm:  Specify UTF-8 encoding in HTML header.
